--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "dotenv": "^16.0.1",
     "next": "12.1.6",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-hot-toast": "^2.2.0"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
