fix: update .env.sample

--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,7 @@
-NEXT_CANDY_MACHINE_ID=
+NEXT_PUBLIC_CLIENT_ID=
 NEXT_PUBLIC_SOLANA_RPC_HOST=
+NEXT_PUBLIC_TREASURY_ADDRESS=
+NEXT_CANDY_MACHINE_ID=
+NEXT_SPL_TOKEN_MINTS=
+NEXT_PUBLIC_CANDY_MACHINE_CONFIG=
+NEXT_PUBLIC_CANDY_START_DATE=
