--- a/.env.sample
+++ b/.env.sample
@@ -1,7 +1,5 @@
-NEXT_PUBLIC_CLIENT_ID=
-NEXT_PUBLIC_SOLANA_RPC_HOST=
-NEXT_PUBLIC_TREASURY_ADDRESS=
-NEXT_CANDY_MACHINE_ID=
+NEXT_PUBLIC_CANDY_MACHINE_ID=
+NEXT_PUBLIC_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
 NEXT_SPL_TOKEN_MINTS=
-NEXT_PUBLIC_CANDY_MACHINE_CONFIG=
 NEXT_PUBLIC_CANDY_START_DATE=
+NEXT_PUBLIC_CLIENT_ID=
