--- a/.env.sample
+++ b/.env.sample
@@ -1,2 +1,6 @@
-NEXT_CANDY_MACHINE_ID=
-NEXT_PUBLIC_SOLANA_RPC_HOST=
+NEXT_PUBLIC_CANDY_MACHINE_ID=4LtidQ2P8udRxaUZQZgPhe72EZ2sLBoyQf84QwMUXwCd
+NEXT_PUBLIC_SOLANA_RPC_HOST=https://explorer-api.devnet.solana.com
+NEXT_SPL_TOKEN_MINTS=
+NEXT_PUBLIC_CANDY_START_DATE=
+NEXT_PUBLIC_CLIENT_ID=
+NEXT_PUBLIC_SHOP_PRIVATE_KEY= 
