feat: Validate Transaction
Added Functions to validate transaction signature

Signed-off-by: Salisu Ali <salisbuk7897@gmail.com>

--- a/.env.sample
+++ b/.env.sample
@@ -4,3 +4,4 @@ NEXT_SPL_TOKEN_MINTS=
 NEXT_PUBLIC_CANDY_START_DATE=
 NEXT_PUBLIC_CLIENT_ID=
 NEXT_PUBLIC_SHOP_PRIVATE_KEY= 
+NEXT_PUBLIC_NETWORK= Devnet
