--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "bs58": "^5.0.0",
     "dotenv": "^16.0.1",
     "next": "12.1.6",
-    "react-circular-progressbar": "^2.0.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-circular-progressbar": "^2.0.4",
+    "react-dom": "18.2.0",
+    "tweetnacl": "^1.0.3"
   },
   "devDependencies": {
     "@types/node": "18.0.0",
