--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@metaplex/js": "^4.7.0",
     "@project-serum/anchor": "^0.25.0-beta.1",
-    "@solana/pay": "^0.2.0",
+    "@solana/pay": "^0.2.1",
     "@solana/spl-token": "^0.2.0",
     "@solana/wallet-adapter-base": "^0.9.5",
     "@solana/wallet-adapter-react": "^0.15.5",
@@ -22,16 +22,12 @@
     "bignumber.js": "^9.0.2",
     "bs58": "^5.0.0",
     "dotenv": "^16.0.1",
-    "next": "12.1.6",
+    "next": "12.2.1",
     "react": "18.2.0",
-<<<<<<< HEAD
     "react-circular-progressbar": "^2.0.4",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.2.0",
     "tweetnacl": "^1.0.3"
-=======
-    "react-dom": "18.2.0",
-    "react-hot-toast": "^2.2.0"
->>>>>>> 81576e89795b1d24ee5e4a6f97d0d056f4c0ff61
   },
   "devDependencies": {
     "@types/node": "18.0.0",
